Navbar overlap fixed

--- a/frontend/src/style/components/_NavBar.sass
+++ b/frontend/src/style/components/_NavBar.sass
@@ -42,24 +42,26 @@
 
 @media (max-width: 780px)
     .navbar
+        display: block
         position: fixed
         top: calc(4.4rem + 4.5vh)
         left: 0
         width: 100%
         height: calc(100vh - 4.5vh - 4.4rem )
-        transition: opacity .5s
+        transition: opacity .3s
         opacity: 0
         z-index: 0
 
         &--open
             opacity: 1
-            z-index: 3
+            z-index: 5
 
         &--closing
             opacity: 0
-            z-index: 3
+            z-index: 5
 
         &--final
+            display: none
             z-index: 0
 
         &__list
@@ -70,7 +72,7 @@
             padding: 0 1rem 0 0
             width: 100%
             height: 100%
-            z-index: 3
+            position: relative
 
             &Item
                 width: 100%
@@ -79,6 +81,7 @@
 
         &__link
             width: 100%
+            position: relative
             &:hover
                 background: none
 
